United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 6988779 c1_LIRAssembler_x86.cpp crashes VS2010 compiler
6988779 : c1_LIRAssembler_x86.cpp crashes VS2010 compiler

Details
Type:
Bug
Submit Date:
2010-09-30
Status:
Resolved
Updated Date:
2011-01-28
Project Name:
JDK
Resolved Date:
2010-12-08
Component:
hotspot
OS:
windows
Sub-Component:
compiler
CPU:
x86
Priority:
P4
Resolution:
Fixed
Affected Versions:
hs20
Fixed Versions:
hs20

Related Reports
Backport:

Sub Tasks

Description
c:\build_area\jdk7\hotspot\src\cpu\x86\vm\c1_lirassembler_x86.cpp(1643) : fatal error C1001: An internal error has occurred in the compiler.
(compiler file 'f:\dd\vctools\compiler\utc\src\p2\main.c[0x0000000000CECB58:0x0000000400CED060]', line 183)
 To work around this problem, try simplifying or changing the program near the locations listed above.
Please choose the Technical Support command on the Visual C++ 
 Help menu, or open the Technical Support help file for more information
Internal Compiler Error in C:\Program Files (x86)\Microsoft Visual Studio 10.0\VC\BIN\amd64\cl.exe.  You will be prompted to send an error report to Microsoft later.
INTERNAL COMPILER ERROR in 'C:\Program Files (x86)\Microsoft Visual Studio 10.0\VC\BIN\amd64\cl.exe'
    Please choose the Technical Support command on the Visual C++
    Help menu, or open the Technical Support help file for more information

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-gc/hotspot/rev/5511edd5d719
                                     
2010-10-09
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot/hotspot/rev/5511edd5d719
                                     
2010-10-01



Hardware and Software, Engineered to Work Together