6988779: c1_LIRAssembler_x86.cpp crashes VS2010 compiler

The workaround changes the scope of the variable

Reviewed-by: phh, ysr, kvn